<resources>
    <string name="app_name">AccountManager</string>
    <string name="login">Login</string>
    <string name="continue_">Continue</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="please_enter_your_phone_no">Please enter your phone no.</string>
    <string name="phone_no">Phone no.</string>
    <string name="sign_up">Sign Up</string>
    <string name="business_name">Business Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>