<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_15sdp"
    android:paddingVertical="@dimen/_5sdp"
    tools:context=".ui.SignupActivity"
    tools:ignore="ContentDescription">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

    </RelativeLayout>
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_270sdp"
        android:layout_below="@id/header"
        android:layout_above="@id/body"
        android:src="@drawable/ic_signup" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_above="@id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/prompt_regular"
                android:autofillHints="username"
                android:background="@color/light_gray"
                android:hint="@string/enter_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:inputType="textPersonName|textCapWords"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_business_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:fontFamily="@font/prompt_regular"
                android:autofillHints="name"
                android:background="@color/light_gray"
                android:hint="@string/business_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:fontFamily="@font/prompt_regular"
                android:background="@color/light_gray"
                android:hint="@string/enter_phone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color" />


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:autofillHints="password"
                android:background="@color/light_gray"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_background"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_15sdp">

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:autofillHints="password"
                android:background="@color/light_gray"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/edit_text_color" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/prompt_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_13sdp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</RelativeLayout>